--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </section>
 			<section>
                 <h2>Drone Shooter</h2>
-                <p>A prototype to test Unity's 3D functonalities by making an FPS.</p>
+                <p>A prototype to test Unity's 3D functonalities by making a FPS.</p>
                 <p><img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
                 <p><img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
             </section>
@@ -79,7 +79,8 @@
 			<p>Below is a video of a mod (addition of the Cell race for the Dragon Block C mod) for which I received, in return for its realization, a payment:</p>
 			<div class="videoDiv">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/BiryRiPXEFQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-            </div>
+            	<p><a id="dwn" href="https://github.com/Hedaox/OmniKings"> Source code </a></p>
+	</div>
 		</section>
         <section>
             <h2><a name="Thr">Three.js</a></h2></br>
