--- a/indexFr.html
+++ b/indexFr.html
@@ -79,7 +79,8 @@
 			<p>Ci dessous une vidéo d'un mod (ajout de la race de Cell pour le mod Dragon Block C) pour lequel j'ai perçu, en contre partie de sa réalisation, un paiement :</p>
 			<div class="videoDiv">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/BiryRiPXEFQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-            </div>
+            <p><a id="dwn" href="https://github.com/Hedaox/OmniKings"> Code source </a></p>
+	</div>
 		</section>
         <section>
             <h2><a name="Thr">Three.js</a></h2></br>
