--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<div class="videoDiv">
 					 <iframe width="560" height="315" src="https://www.youtube.com/embed/QNYUnBpoyuw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
 				</div>
-		<br/>
+		<p>This uses the open-source code <a href="https://github.com/Auburn/FastNoise_CSharp">FastNoise</a>, in order to produce the semi-random form. Directly in the editor we can create multiple layers of noise in order to make more complex shapes.</p>
             </section>
 			<section>
                 <h2>Drone Shooter</h2>
