--- a/indexFr.html
+++ b/indexFr.html
@@ -39,7 +39,7 @@
 			<div class="videoDiv">
 				 <iframe width="560" height="315" src="https://www.youtube.com/embed/QNYUnBpoyuw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
 			</div>
-		<br/>
+		<p>Cela utilise le code open-source <a href="https://github.com/Auburn/FastNoise_CSharp"> FastNoise </a>, afin de produire la forme semi-aléatoire. Directement dans l'éditeur, on peut créer plusieurs layers de noise afin de créer des formes plus complexes.</p>
             	</section>
 			<section>
                 <h2>Drone Shooter</h2>
