--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
 				<div class="videoDiv">
 					 <iframe width="560" height="315" src="https://www.youtube.com/embed/QNYUnBpoyuw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
 				</div>
-		<p>This uses the open-source code <a href="https://github.com/Auburn/FastNoise_CSharp">FastNoise</a>, in order to produce the semi-random form. Directly in the editor we can create multiple layers of noise in order to make more complex shapes.</p>
+				<p>This uses the open-source code <a href="https://github.com/Auburn/FastNoise_CSharp">FastNoise</a>, in order to produce the semi-random form. Directly in the editor we can create multiple layers of noise in order to make more complex shapes.</p>
+				<p>With this I manage to make some procedurally generated terrain :</p>
+				<div class="videoDiv">
+					 <iframe width="560" height="315" src="https://www.youtube.com/embed/o-sNSRR6Y0E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+				</div>
+				<p>The user interface is used to change Size and Seed for the procedurally generated Terrain. The seed is used to make different terrain form by moving noise position. The terrain also have different biomes depending on vertex height, vertex position and slope.</p>
             </section>
 			<section>
                 <h2>Drone Shooter</h2>
