--- a/indexFr.html
+++ b/indexFr.html
@@ -33,14 +33,19 @@
 				<p>Pour plus d'infos sur ce stage téléchargez le rapport de stage : </p>
 				<p><strong><a id="dwn" href="RAPPORT_STAGE_SAFRAN_V1.5.pdf " download> Rapport </a></strong></p>
             </section>
-		<section>
+			<section>
                 <h2>Manipulation d'un Mesh</h2>
                 <p>Manipulations de terrain dans Unity, programmées pour fonctionner en temps réel directement dans l'éditeur.</p>
-			<div class="videoDiv">
-				 <iframe width="560" height="315" src="https://www.youtube.com/embed/QNYUnBpoyuw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-			</div>
-		<p>Cela utilise le code open-source <a href="https://github.com/Auburn/FastNoise_CSharp"> FastNoise </a>, afin de produire la forme semi-aléatoire. Directement dans l'éditeur, on peut créer plusieurs layers de noise afin de créer des formes plus complexes.</p>
-            	</section>
+				<div class="videoDiv">
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/QNYUnBpoyuw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+				</div>
+				<p>Cela utilise le code open-source <a href="https://github.com/Auburn/FastNoise_CSharp"> FastNoise </a>, afin de produire la forme semi-aléatoire. Directement dans l'éditeur, on peut créer plusieurs layers de noise afin de créer des formes plus complexes.</p>
+				<p>Avec cela, je parviens à créer un terrain généré de manière procédurale :</p>
+				<div class="videoDiv">
+					 <iframe width="560" height="315" src="https://www.youtube.com/embed/o-sNSRR6Y0E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+				</div>
+				<p>L'interface utilisateur est utilisée pour modifier la taille et la seed du terrain généré de manière procédurale. La seed est utilisée pour créer différentes formes de terrain en déplaçant la position du noise. Le terrain a également différents biomes en fonction de la hauteur des vertex, leurs positions ainsi que de la pente du terrain.</p>
+			</section>
 			<section>
                 <h2>Drone Shooter</h2>
                 <p>Un prototype pour tester les fonctonalités 3D de Unity en faisant un FPS.</p>
