--- a/index.html
+++ b/index.html
@@ -1,109 +1,150 @@
+
+
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Index Hedaox's Games</title>
-        <link rel="icon" type="image/png" href="Images/favicon.png">
-        <link rel="stylesheet" href="style.css">
-    </head>
-
-    <body>
-	<a href=indexFr.html><img src="Images/englishButton.png" alt="map" class="langButton" width="50%" height="50%"></a>
-	<h1>Hedaox's Games</h1>
-        <ul id="nav">
-            <li><a href="#Uni">Unity</a></li>
-	    <li><a href="#Unr">Unreal Engine 4</a></li>
-	    <li><a href="#Min">Minecraft</a></li>
-            <li><a href="#Thr">Three.js</a></li>
-            <li><a href="#Gam">GameMaker</a></li>
-        </ul>
-        <section>
-            <h2><a name="Uni">Unity</a></h2>
-            <section>
-                <h2>Internship at Safran Engineering Services</h2>
-                <p>This is the end-of-study internship that I did during my master's degree. The goal of this internship was to carry out proofs of concepts with Unity 3D in Virtual Reality.</p>
-				<p>In particular, I had the opportunity to work with Leap Motion, a technology capable of detecting and representing the user's hands in 3D.</p>
-				 <div class="videoDiv">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/kEwnJC85aRU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-				 </div>
-				<p>Another of the projects was to create a package allowing the use of virtual reality with multi-users features.</p>
-				<div class="videoDiv">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/I636okERUKg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-				</div>
-				<p>For more information on this internship download the internship report(in French):</p>
-				<p><strong><a id="dwn" href="RAPPORT_STAGE_SAFRAN_V1.5.pdf " download> Report </a></strong></p>
-            </section>
-            <section>
-                <h2>Mesh Manipulation</h2>
-                <p>Some terrain mesh manipulation in Unity made to work in real time directly in the editor.</p>
-				<div class="videoDiv">
-					 <iframe width="560" height="315" src="https://www.youtube.com/embed/QNYUnBpoyuw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-				</div>
-				<p>This uses the open-source code <a href="https://github.com/Auburn/FastNoise_CSharp">FastNoise</a>, in order to produce the semi-random form. Directly in the editor we can create multiple layers of noise in order to make more complex shapes.</p>
-				<p>With this I manage to make some procedurally generated terrain :</p>
-				<div class="videoDiv">
-					 <iframe width="560" height="315" src="https://www.youtube.com/embed/o-sNSRR6Y0E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-				</div>
-				<p>The user interface is used to change Size and Seed for the procedurally generated Terrain. The seed is used to make different terrain form by moving noise position. The terrain also have different biomes depending on vertex height, vertex position and slope.</p>
-            </section>
-			<section>
-                <h2>Drone Shooter</h2>
-                <p>A prototype to test Unity's 3D functonalities by making a FPS.</p>
-                <p><img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
-                <p><img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
-            </section>
-            <section>
-                <h2>Asteroïds</h2>
-                <p>A remake of the famous 1979 Asteroids game made on Unity.</p>
-				<div class="videoDiv">
-					 <iframe width="560" height="315" src="https://www.youtube.com/embed/v3xlhWVyd60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-				</div>
-		        <p>To play use the directional arrows to move and SPACE to shoot.</p>
-                <p><strong><a id="dwn" href="Asteroïds.zip" download> Download the game </a></strong></p>
-            </section>
-        </section>
-        <section>
-            <h2><a name="Unr">Unreal Engine 4</a></h2></br>
-			<p>A Simple FPS made using Unreal Engine 4 and a bit of C++ (for changing the weapon behaviour).</p>
-			<div class="videoDiv">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/25KGTky7P7A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-			</div>
-			<br/>
-        </section>
-		<section>
-			<h2><a name="Min">Minecraft - Dragon Ball Ninjin</a></h2>
-			<p>Dragon Ball NINJIN is a Minecraft server project in Dragon Ball theme based on <a href="http://main.jingames.net/">JinGames</a>'s Dragon Block C mod. It is a French-speaking survival and semi-RolePlay server, the goal being to get as close as possible to the atmosphere of the DragonBall universe described in the manga and anime.</p>
-			<div class="videoDiv">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/k3QE7VyoZKQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+   <head>
+      <meta charset="utf-8" />
+      <title>Hedaox's Works</title>
+      <link rel="icon" type="image/png" href="Images/favicon.png">
+      <link rel="stylesheet" href="style.css">
+   </head>
+   <body>
+      <a href=indexFr.html><img src="Images/englishButton.png" alt="map" class="langButton" width="50%" height="50%"></a>
+      <h1>Hedaox's Works</h1>
+      <ul id="nav">
+         <li><a href="#Uni">Unity</a></li>
+         <li><a href="#Unr">Unreal Engine 4</a></li>
+         <li><a href="#Min">Minecraft</a></li>
+         <li><a href="#Thr">Three.js</a></li>
+         <li><a href="#Gam">GameMaker</a></li>
+      </ul>
+      <section>
+         <h2><a name="Uni">Works on Unity</a></h2>
+         <section>
+            <h2>Internship at Bastion Studio</h2>
+            <p>Internship I did for 2 months for the game <strong>La Porte des Fauconniers</strong> (French game that is not released yet). </p>
+            <p>Here is the game trailer for its <a href="https://www.indiegogo.com/projects/la-porte-des-fauconniers-guerre-medievale#/"> indiegogo campaign</a> : </p>
+            <div class="videoDiv">
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/0X1Cv8YoMQE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
             </div>
-			<p>For more info visit the server's website(in French):</p>
-			<p><a id="dwn" href="https://hedaox.github.io/Ninjin/index.html"> Le site Web </a></p>
-			<p>During this project I had the opportunity to make a lot of mods, including two that I published in open source:</p>
-			<p><a id="dwn" href="https://github.com/Hedaox/ninjinentities"> NinjinEntities </a></p>
-			<p><a id="dwn" href="https://github.com/Hedaox/ninjinknockback"> NinjinKnockback </a></p>
-			<p>Below is a video of a mod (addition of the Cell race for the Dragon Block C mod) for which I received, in return for its realization, a payment:</p>
-			<div class="videoDiv">
-                		<iframe width="560" height="315" src="https://www.youtube.com/embed/BiryRiPXEFQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-            		</div>
-			<p><a id="dwn" href="https://github.com/Hedaox/OmniKings"> Source code </a></p>
-		</section>
-        <section>
-            <h2><a name="Thr">Three.js</a></h2></br>
-			<h2>Space Invaders</h2>
-			<p>A remake of Space Invaders made with Three.js, realized as part of a course during my 1st year of master's degree.</p>
-            <p><img src="Images/SIGame.JPG" alt="map" class="responsive" width="50%" height="50%"></p>
-            <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/src/html/acceuil.html"> Play the game online</a></p>
-	    <p><a id="dwn" href="https://github.com/Hedaox/SpaceInvaders"> Source code </a></p>
-            <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/rapport/html/index.html"> Report(in French) </a></p>
-        </section>
-		        <section>
-            <h2><a name="Gam">GameMaker</a></h2></br>
-			<h2>Shinning Champions</h2>
-            <p>A small action-RPG prototype made in GameMaker. All the assets were made by myself. Very simple game where the player can move / attack, as well as collect equipment. For now you can only fight an unarmed individual in an arena that will respawn each time you leave the location.</p> 
-            <p><img src="Images/SC1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
-            <p><img src="Images/SC2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
-	    <p>To play use the directional arrows to move, A / Z to Attack, W / X to grab an object, C / V to drop an object from your hand, B / N / H to drop equipment and SPACE to interact . To fight in the arena, take the entrance at the top left, then move left and press SPACE to enter the arena.</p>
-            <p><strong><a id="dwn" href="Shining_Champions2.zip" download> Download the game </a></strong></p>
-        </section>
+            <p>For this game, I mainly worked on the UI as well as the save system and the gameplay. </p>
+            <p>The game also has a <a href="https://store.steampowered.com/app/1493240/La_Porte_des_Fauconniers__Guerre_Mdivale/"> Steam page </a> for more information.</p>
+         </section>
+         <section>
+            <h2>Internship at Safran Engineering Services</h2>
+            <p>This is the end-of-study internship, lasting 6 months, that I did during my master's degree.</p>
+			<p>The goal of this internship was to carry out proofs of concepts with Unity 3D in Virtual Reality.</p>
+            <p>In particular, I had the opportunity to work with Leap Motion, a technology capable of detecting and representing the user's hands in 3D.</p>
+            <div class="videoDiv">
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/kEwnJC85aRU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+            </div>
+            <p>Another of the projects was to create a package allowing the use of virtual reality with multi-users features.</p>
+            <div class="videoDiv">
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/I636okERUKg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+            </div>
+            <p>For more information on this internship, download the internship report(in French):</p>
+            <p><strong><a id="dwn" href="RAPPORT_STAGE_SAFRAN_V1.5.pdf" download> Report </a></strong></p>
+         </section>
+         <section>
+            <h2>Mesh Manipulation</h2>
+            <p>Some terrain mesh manipulation in Unity made to work in real time directly in the editor.</p>
+            <div class="videoDiv">
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/QNYUnBpoyuw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+            </div>
+            <p>This uses the open-source code <a href="https://github.com/Auburn/FastNoise_CSharp">FastNoise</a>, in order to produce the semi-random form. Directly in the editor we can create multiple layers of noise in order to make more complex shapes.</p>
+            <p>With this I manage to make some procedurally generated terrain :</p>
+            <div class="videoDiv">
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/o-sNSRR6Y0E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+            </div>
+            <p>The user interface is used to change Size and Seed for the procedurally generated Terrain. The seed is used to make different terrain form by moving noise position. The terrain also have different biomes depending on vertex height, vertex position and slope.</p>
+         </section>
+         <section>
+            <h2>Drone Shooter</h2>
+            <p>A prototype to test Unity's 3D functonalities by making a FPS.</p>
+            <p><img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
+            <p><img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
+         </section>
+         <section>
+            <h2>Asteroïds</h2>
+            <p>A remake of the famous 1979 Asteroids game made on Unity.</p>
+            <div class="videoDiv">
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/v3xlhWVyd60" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+            </div>
+            <p>To play use the directional arrows to move and SPACE to shoot.</p>
+            <p><strong><a id="dwn" href="Asteroïds.zip" download> Download the game </a></strong></p>
+         </section>
+      </section>
+      <br/>
+      <br/>
+      <br/>
+      <section>
+         <h2><a name="Unr">Unreal Engine 4</a></h2>
+         </br>
+         <p>A Simple FPS made using Unreal Engine 4 and a bit of C++ (for changing the weapon behaviour).</p>
+         <div class="videoDiv">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/25KGTky7P7A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+         </div>
+         <br/>
+      </section>
+      <br/>
+      <br/>
+      <br/>
+      <section>
+         <h2><a name="Min">Minecraft</a></h2>
+		 <section>
+            <h2>LoverFella MC</h2>
+			 <p>LoverFella is primarily an English Minecraft youtuber, but also has a highly successful game server of the same name.</p>
+			 <p>I was recruited as a freelance developer on this server to create a plugin. </p>
+			 <p>The goal of the plugin is to be able to perform duels between players. Here is an example of what a duel looks like :</p>
+			 <p><img src="Images/duelarena2.gif" alt="map" class="responsive" width="40%" height="40%"></p>
+			 <p><a href="https://www.youtube.com/c/LoverFella">His youtube channel</a> is very popular with over 2.5 Million subscribers. 
+			 <p><a href="https://store.loverfella.com/">The Server</a>, meanwhile, has hundreds, sometimes more than 1000 players connected simultaneously every day. </p>
+			 <p>As well as a community of more than a hundred thousand people (number of members on their <a href = "https://discordapp.com/invite/loverfam">discord server</a>).</p>
+		 </section>		 
+		 <section>
+            <h2>Dragon Ball Ninjin</h2>
+			 <p>Dragon Ball NINJIN is a Minecraft server project in Dragon Ball theme based on <a href="http://main.jingames.net/">JinGames</a>'s Dragon Block C mod.</p>
+			 <p>It is a French-speaking survival and semi-RolePlay server, the goal being to get as close as possible to the atmosphere of the DragonBall universe described in the manga and anime.</p>
+			 <div class="videoDiv">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/k3QE7VyoZKQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+			 </div>
+			 <p>For more info visit the server's website(in French):</p>
+			 <p><a id="dwn" href="https://hedaox.github.io/Ninjin/index.html"> Website </a></p>
+			 <p>During this project I had the opportunity to make a lot of mods, including three that I published in open source on <strong>Github</strong> :</p>
+			 <p><a id="dwn" href="https://github.com/Hedaox/ninjinentities"> NinjinEntities </a></p>
+			 <p><a id="dwn" href="https://github.com/Hedaox/ninjinknockback"> NinjinKnockback </a></p>
+			 <p><a id="dwn" href="https://github.com/Hedaox/OmniKings"> Omnikings </a></p>
+			 <p>A video showing the OmniKings mod (Add the Bio-Cyborg race) :</p>
+			 <div class="videoDiv">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/BiryRiPXEFQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+			 </div>
+		 </section>
+      </section>
+      <br/>
+      <br/>
+      <br/>
+      <section>
+         <h2><a name="Thr">Three.js</a></h2>
+         </br>
+         <h2>Space Invaders</h2>
+         <p>A remake of Space Invaders made with Three.js, realized as part of a course during my 1st year of master's degree.</p>
+         <p><img src="Images/SIGame.JPG" alt="map" class="responsive" width="50%" height="50%"></p>
+         <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/src/html/acceuil.html"> Play the game online</a></p>
+         <p><a id="dwn" href="https://github.com/Hedaox/SpaceInvaders"> Source code </a></p>
+         <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/rapport/html/index.html"> Report(in French) </a></p>
+      </section>
+      <br/>
+      <br/>
+      <br/>
+      <section>
+         <h2><a name="Gam">GameMaker</a></h2>
+         </br>
+         <h2>Shinning Champions</h2>
+         <p>A small action-RPG prototype made in GameMaker. All the assets were made by myself. Very simple game where the player can move / attack, as well as collect equipment. For now you can only fight an unarmed individual in an arena that will respawn each time you leave the location.</p>
+         <p><img src="Images/SC1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
+         <p><img src="Images/SC2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
+         <p>To play use the directional arrows to move, A / Z to Attack, W / X to grab an object, C / V to drop an object from your hand, B / N / H to drop equipment and SPACE to interact . To fight in the arena, take the entrance at the top left, then move left and press SPACE to enter the arena.</p>
+         <p><strong><a id="dwn" href="Shining_Champions2.zip" download> Download the game </a></strong></p>
+      </section>
 </html>
 
