--- a/indexFr.html
+++ b/indexFr.html
@@ -2,27 +2,38 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Index Hedaox's Games</title>
+        <title>Hedaox's Works</title>
         <link rel="icon" type="image/png" href="Images/favicon.png">
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
 	<a href=index.html><img src="Images/frenchButton.png" alt="map" class="langButton" width="50%" height="50%"></a>
-	<h1>Hedaox's Games</h1>
+	<h1>Hedaox's Works</h1>
         <ul id="nav">
             <li><a href="#Uni">Unity</a></li>
-	    <li><a href="#Min">Minecraft</a></li>
-	    <li><a href="#Unr">Unreal Engine 4</a></li>
+			<li><a href="#Unr">Unreal Engine 4</a></li>
+			<li><a href="#Min">Minecraft</a></li>
             <li><a href="#Thr">Three.js</a></li>
             <li><a href="#Gam">GameMaker</a></li>
         </ul>
         <section>
-            <h2><a name="Uni">Unity</a></h2>
+            <h2><a name="Uni">Travaux sur Unity</a></h2>
+		 <section>
+            <h2>Stage chez Bastion Studio</h2>
+            <p>Stage que j'ai réalisé pendant 2 mois pour le jeu <strong>La Porte des Fauconniers</strong> (pas encore sorti).</p>
+            <p>Voici le trailer du jeu pour sa <a href="https://www.indiegogo.com/projects/la-porte-des-fauconniers-guerre-medievale#/"> campagne indiegogo</a> :</p>
+            <div class="videoDiv">
+               <iframe width="560" height="315" src="https://www.youtube.com/embed/0X1Cv8YoMQE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+            </div>
+            <p>Pour ce jeu, j'ai surtout travaillé sur l'UI ainsi que sur le système de sauvegarde et le gameplay.</p>
+            <p>Le jeu a aussi une <a href="https://store.steampowered.com/app/1493240/La_Porte_des_Fauconniers__Guerre_Mdivale/"> page Steam</a> pour plus d'information.</p>
+         </section>
             <section>
                 <h2>Stage Safran Engineering Services</h2>
-                <p>Il s'agit du stage de fin d'étude que j'ai réalisé durant mon master. Le but de ce stage était de réalisé des "proofs of concepts" avec Unity 3D en Réalité virtuelle.</p>
-				<p>J'ai eu notamment l'occasion de travailler avec le Leap Motion, une technologie capable de détecter et représenter en 3D les mains de l'utilisateur.</p>
+                <p>Il s'agit du stage de fin d'étude, d'une durée de 6 mois, que j'ai réalisé durant mon master.</p> 
+				<p>Le but de ce stage était de réaliser des "proofs of concepts" avec Unity 3D en Réalité virtuelle.</p>
+				<p>J'ai eu notamment l'occasion de travailler avec le Leap Motion, une technologie capable de détecter et de représenter en 3D les mains de l'utilisateur.</p>
 				 <div class="videoDiv">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/kEwnJC85aRU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
 				 </div>
@@ -30,7 +41,7 @@
 				<div class="videoDiv">
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/I636okERUKg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
 				</div>
-				<p>Pour plus d'infos sur ce stage téléchargez le rapport de stage : </p>
+				<p>Pour plus d'infos sur ce stage, téléchargez le rapport de stage : </p>
 				<p><strong><a id="dwn" href="RAPPORT_STAGE_SAFRAN_V1.5.pdf " download> Rapport </a></strong></p>
             </section>
 			<section>
@@ -48,7 +59,7 @@
 			</section>
 			<section>
                 <h2>Drone Shooter</h2>
-                <p>Un prototype pour tester les fonctonalités 3D de Unity en faisant un FPS.</p>
+                <p>Un prototype pour tester les fonctionnalités 3D d'Unity en faisant un FPS.</p>
                 <p><img src="Images/Drone_Shooter1.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
                 <p><img src="Images/Drone_Shooter2.PNG" alt="map" class="responsive" width="50%" height="50%"></p>
             </section>
@@ -62,31 +73,54 @@
                 <p><strong><a id="dwn" href="Asteroïds.zip" download> Télécharger le jeu </a></strong></p>
             </section>
         </section>
+		<br/>
+		<br/>
+		<br/>
         <section>
             <h2><a name="Unr">Unreal Engine 4</a></h2></br>
-			<p>Un Simple FPS fait en utilisant Unreal Engine 4 et un peu de C++ (Pour changer le comportement de l'arme).</p>
+			<p>Un Simple FPS fait en utilisant Unreal Engine 4 et un peu de C++ (pour changer le comportement de l'arme).</p>
 			<div class="videoDiv">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/25KGTky7P7A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
 			</div>
 	    <br/>
         </section>
+		<br/>
+		<br/>
+		<br/>		
 		<section>
-			<h2><a name="Min">Minecraft - Dragon Ball Ninjin</a></h2>
-			<p>DragonBall NINJIN est un projet de serveur Minecraft dans le thème de Dragon Ball basé sur le mod Dragon Block C de <a href="http://main.jingames.net/">JinGames</a>. Il s'agit d'un serveur survival et semi-RP francophone, le but étant de se rapprocher le plus fidèlement possible de l'ambiance de l'univers de DragonBall décrit dans le manga et anime éponyme.</p>
-			<div class="videoDiv">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/k3QE7VyoZKQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-            </div>
-			<p>Pour plus d'infos allez visiter le site web du serveur :</p>
-			<p><a id="dwn" href="https://hedaox.github.io/Ninjin/index.html"> Le site Web </a></p>
-			<p>Durant ce projet j'ai eu l'occasion de réaliser énormément de mods, dont deux que j'ai publié en open source :</p>
-			<p><a id="dwn" href="https://github.com/Hedaox/ninjinentities"> NinjinEntities </a></p>
-			<p><a id="dwn" href="https://github.com/Hedaox/ninjinknockback"> NinjinKnockback </a></p>
-			<p>Ci dessous une vidéo d'un mod (ajout de la race de Cell pour le mod Dragon Block C) pour lequel j'ai perçu, en contre partie de sa réalisation, un paiement :</p>
-			<div class="videoDiv">
-                		<iframe width="560" height="315" src="https://www.youtube.com/embed/BiryRiPXEFQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
-			</div>
-		    	<p><a id="dwn" href="https://github.com/Hedaox/OmniKings"> Code source </a></p>
-		</section>
+         <h2><a name="Min">Minecraft</a></h2>
+		 <section>
+            <h2>LoverFella MC</h2>
+			 <p>LoverFella est principalement un youtuber Minecraft Anglais, mais possède aussi un serveur de jeu de grand succès du même nom.</p>
+			 <p>J'ai été recruté en tant que développeur freelance auprès de ce serveur pour réaliser un plugin.</p>
+			 <p>Le but du plugin étant de pouvoir réaliser des duels entre joueurs. Ici un exemple de ce à quoi un duel ressemble :</p>
+			 <p><img src="Images/duelarena2.gif" alt="map" class="responsive" width="40%" height="40%"></p>
+			 <p><a href="https://www.youtube.com/c/LoverFella">Sa chaîne youtube</a> est très populaire cumulant plus de 2,5 Millions d'abonnés.
+			 <p><a href="https://store.loverfella.com/">Le Serveur</a>, quant à lui, possède des centaines, parfois plus de 1000 joueurs connectés en simultané tous les jours.</p>
+			 <p>Ainsi qu'une communauté de plus d'une centaine de milliers de personnes (nombre de membres sur leur <a href = "https://discordapp.com/invite/loverfam">serveur discord</a>).</p>
+		 </section>		 
+		 <section>
+            <h2>Dragon Ball Ninjin</h2>
+			 <p>Dragon Ball NINJIN est un projet de serveur Minecraft dans le thème Dragon Ball basé sur le mod Dragon Block C de <a href="http://main.jingames.net/">JinGames</a>.</p>
+			 <p>Il s'agit d'un serveur de survie et semi-RolePlay francophone, le but étant de se rapprocher au plus près de l'ambiance de l'univers DragonBall décrit dans le manga et l'anime.</p>
+			 <div class="videoDiv">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/k3QE7VyoZKQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+			 </div>
+			 <p>Pour plus d'informations visitez le site Web du serveur : </p>
+			 <p><a id="dwn" href="https://hedaox.github.io/Ninjin/index.html"> Site Web </a></p>
+			 <p>Au cours de ce projet j'ai eu l'opportunité de faire pas mal de mods, dont trois que j'ai publiés en open source sur <strong>Github</strong> :</p>
+			 <p><a id="dwn" href="https://github.com/Hedaox/ninjinentities"> NinjinEntities </a></p>
+			 <p><a id="dwn" href="https://github.com/Hedaox/ninjinknockback"> NinjinKnockback </a></p>
+			 <p><a id="dwn" href="https://github.com/Hedaox/OmniKings"> Omnikings </a></p>
+			 <p>Une vidéo montrant le mod OmniKings (Ajout de la race Bio-Cyborg) :</p>
+			 <div class="videoDiv">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/BiryRiPXEFQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="video"></iframe>
+			 </div>
+		 </section>
+      </section>
+		<br/>
+		<br/>
+		<br/>		
         <section>
             <h2><a name="Thr">Three.js</a></h2></br>
 			<h2>Space Invaders</h2>
@@ -96,7 +130,10 @@
 	    <p><a id="dwn" href="https://github.com/Hedaox/SpaceInvaders"> Le code source </a></p>
             <p><a id="dwn" href="https://hedaox.github.io/SpaceInvaders/rapport/html/index.html"> Le Rapport </a></p>
         </section>
-		        <section>
+		<br/>
+		<br/>
+		<br/>		
+		<section>
             <h2><a name="Gam">GameMaker</a></h2></br>
 			<h2>Shinning Champions</h2>
             <p>Un petit prototype d'action-RPG sur GameMaker. Tous les assets ont été réalisés par moi-même. Jeu très simple où le joueur peut se déplacer/attaquer, ainsi que rammasser de l'équipement. Pour l'instant vous pouvez uniquement combattre un individu désarmé dans une arêne qui respawnera à chaque fois que vous quittez le lieu.</p> 
