--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
          <h2><a name="Min">Minecraft</a></h2>
 		 <section>
             <h2>LoverFella MC</h2>
-			 <p>LoverFella is primarily an English Minecraft youtuber, but also has a highly successful game server of the same name.</p>
+			 <p>LoverFella is primarily an English Minecraft youtuber, but also has a highly successful game server of the same name (also called LoverCraft).</p>
 			 <p>I was recruited as a freelance developer on this server to create a plugin. </p>
 			 <p>The goal of the plugin is to be able to perform duels between players. Here is an example of what a duel looks like :</p>
 			 <p><img src="Images/duelarena2.gif" alt="map" class="responsive" width="40%" height="40%"></p>
