--- a/indexFr.html
+++ b/indexFr.html
@@ -91,7 +91,7 @@
          <h2><a name="Min">Minecraft</a></h2>
 		 <section>
             <h2>LoverFella MC</h2>
-			 <p>LoverFella est principalement un youtuber Minecraft Anglais, mais possède aussi un serveur de jeu de grand succès du même nom.</p>
+			 <p>LoverFella est principalement un youtuber Minecraft Anglais, mais possède aussi un serveur de jeu de grand succès du même nom (aussi appelé LoverCraft)</p>
 			 <p>J'ai été recruté en tant que développeur freelance auprès de ce serveur pour réaliser un plugin.</p>
 			 <p>Le but du plugin étant de pouvoir réaliser des duels entre joueurs. Ici un exemple de ce à quoi un duel ressemble :</p>
 			 <p><img src="Images/duelarena2.gif" alt="map" class="responsive" width="40%" height="40%"></p>
